--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "com.airbnb.android:lottie:3.4.0"
     implementation "com.google.android.material:material:1.1.0-beta01"
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
 }
